--- a/style.css
+++ b/style.css
@@ -103,6 +103,16 @@ body {
     -webkit-text-fill-color: rgba(255, 255, 255, 0);
 }
 
+#topic {
+    position: relative;
+    color: var(--accentColor);
+    font-size: 1rem;
+    display: block;
+    font-family: var(--font);
+    width: 100%;
+    text-align: center;
+}
+
 
 /*-------------------------animations-----------------------*/
 @keyframes transitionAnimation {
