--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 
 #userName {
     color: var(--accentColor);
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-weight: bold;
     line-height: 1.25;
     display: block;
@@ -45,11 +45,40 @@ body {
     text-decoration: none;
 }
 
-#links {
-    max-width: 675px;
+.sectionGroupContainer {
+    max-width: 600px;
     width: auto;
     display: block;
-    margin: 27px auto;
+    margin: 0px auto;
+}
+
+.sectionGroup {
+    position: relative;
+    background-color: #4a85c140;
+    border-radius: 10px;
+    padding: 30px;
+    width: auto;
+    display: block;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 27px;
+}
+
+.topic {
+    position: relative;
+    color: var(--accentColor);
+    font-size: 1.2rem;
+    display: block;
+    font-family: var(--font);
+    width: 100%;
+    text-align: center;
+}
+
+.links {
+    max-width: 600px;
+    width: auto;
+    display: block;
+    margin: 20px auto;
 }
 
 .link {
@@ -69,6 +98,11 @@ body {
     /* transition: all .25s cubic-bezier(.08, .59, .29, .99); */
     -webkit-tap-highlight-color: transparent;
 }
+
+.logo-icon {
+    height: 1rem;
+    margin-right: 3px;
+  }
 
 @media (hover: hover) {
     .link:hover {
@@ -101,16 +135,6 @@ body {
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: rgba(255, 255, 255, 0);
-}
-
-#topic {
-    position: relative;
-    color: var(--accentColor);
-    font-size: 1rem;
-    display: block;
-    font-family: var(--font);
-    width: 100%;
-    text-align: center;
 }
 
 
