Added things I enjoy and Marbo sheet

--- a/style.css
+++ b/style.css
@@ -255,6 +255,11 @@ input:checked + .slider::before {
   text-decoration: none;
 }
 
+/* Spacers */
+.spacer {
+  margin: 2rem;
+}
+
 /* Collapsible */
 details {
   background: var(--bg);
