--- a/style.css
+++ b/style.css
@@ -257,7 +257,8 @@ input:checked + .slider::before {
 
 /* Spacers */
 .spacer {
-  margin: 2rem;
+  height: 2rem;
+  width: 100%;
 }
 
 /* Collapsible */
