Fix mobile language toggle styling

--- a/style.css
+++ b/style.css
@@ -360,7 +360,8 @@ footer {
   }
   .language-toggle {
     top: 0.75rem;
-    left: 4.25rem;
+    left: 4.5rem;
+    overflow: visible;
   }
   .switch {
     width: 50px;
@@ -371,9 +372,19 @@ footer {
     width: 22px;
     left: 3px;
     bottom: 3px;
-    font-size: 14px;
+    font-size: 12px;
+  }
+  .slider.lang-slider::before {
+    height: 20px;
+    width: 20px;
+    left: 4px;
+    bottom: 4px;
+    font-size: 12px;
   }
   input:checked + .slider::before {
+    transform: translateX(22px);
+  }
+  input:checked + .slider.lang-slider::before {
     transform: translateX(22px);
   }
 }
